--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Datos desde Google Sheets (TSV)</title>
+  <title>Estado de cuenta de aptos</title>
   <style>
     body {
       font-family: sans-serif;
@@ -24,12 +24,12 @@
   </style>
 </head>
 <body>
-  <h1>Datos desde Google Sheets</h1>
+  <h1>Reporte de estado de cuenta de alquileres</h1>
 
-  <h2>Hoja 1</h2>
+  <h2>Movimientos</h2>
   <div id="tabla-hoja1">Cargando datos...</div>
 
-  <h2>Hoja 2</h2>
+  <h2>Etado de cuenta</h2>
   <div id="tabla-hoja2">Cargando datos...</div>
 
   <script>
