--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Estado de cuenta de aptos</title>
+  <link rel="icon" href="/icono.ico" type="image/x-icon">
   <style>
     body {
       font-family: sans-serif;
