--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Reporte aptos</title>
   <link rel="icon" href="/icono.ico" type="image/x-icon">
+  <link rel="icon" href="/icono.png" type="image/png">
   <style>
     body {
       font-family: sans-serif;
