--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Reporte aptos</title>
   <link rel="icon" href="/icono.ico" type="image/x-icon">
-  <link rel="icon" href="/icono.png" type="image/png">
+  <link rel="shortcut icon" href="/icono.png" type="image/png">
   <style>
     body {
       font-family: sans-serif;
@@ -31,7 +31,7 @@
   <h2>Movimientos</h2>
   <div id="tabla-hoja1">Cargando datos...</div>
 
-  <h2>Etado de cuenta</h2>
+  <h2>Estado de cuenta</h2>
   <div id="tabla-hoja2">Cargando datos...</div>
 
   <script>
