--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,48 @@
     body {
       font-family: sans-serif;
       padding: 20px;
+      background-color: #f8f9fa;
     }
+
+    h1, h2 {
+      color: #333;
+    }
+
     table {
       border-collapse: collapse;
       width: 100%;
       margin-top: 20px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+      border-radius: 6px;
+      overflow: hidden;
     }
+
     th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
+      padding: 12px 16px;
+      text-align: left;
     }
+
     th {
+      background-color: #007bff;
+      color: white;
+      font-weight: bold;
+    }
+
+    tr:nth-child(even) {
       background-color: #f2f2f2;
+    }
+
+    tr:hover {
+      background-color: #e0f7fa;
+    }
+
+    .num {
+      text-align: right;
+      font-variant-numeric: tabular-nums;
+    }
+
+    #tabla-hoja1, #tabla-hoja2 {
+      overflow-x: auto;
     }
   </style>
 </head>
@@ -45,6 +75,11 @@
         url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSRoqjMHGOvIkJgLKpzT65oDQ9xqiA_BdtXtkr9P2hsz4XOtrUq_9qiYLKnEcus9h3AolLbEqS9iQIF/pub?gid=1328811283&single=true&output=tsv"
       }
     ];
+
+    function esNumero(valor) {
+      const limpio = valor.replace(/[.,]/g, "").replace(/\s/g, "");
+      return !isNaN(valor) && !isNaN(parseFloat(limpio));
+    }
 
     function cargarDatos(idElemento, url) {
       fetch(url)
@@ -71,6 +106,11 @@
             fila.forEach(celda => {
               const td = document.createElement("td");
               td.textContent = celda;
+
+              if (esNumero(celda)) {
+                td.classList.add("num");
+              }
+
               tr.appendChild(td);
             });
             tbody.appendChild(tr);
