--- a/public/index.html
+++ b/public/index.html
@@ -6,54 +6,56 @@
   <title>Reporte aptos</title>
   <link rel="icon" href="/icono.ico" type="image/x-icon">
   <link rel="shortcut icon" href="/icono.png" type="image/png">
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
-      background-color: #f8f9fa;
-    }
+ <style>
+  body {
+    font-family: sans-serif;
+    padding: 20px;
+    background-color: #f8f9fa;
+  }
 
-    h1, h2 {
-      color: #333;
-    }
+  h1, h2 {
+    color: #333;
+  }
 
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      margin-top: 20px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-      border-radius: 6px;
-      overflow: hidden;
-    }
+  table {
+    border-collapse: collapse;
+    table-layout: auto;
+    margin-top: 20px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    border-radius: 6px;
+    overflow: hidden;
+  }
 
-    th, td {
-      padding: 12px 16px;
-      text-align: left;
-    }
+  th, td {
+    padding: 8px 12px;
+    text-align: left;
+    white-space: nowrap;
+  }
 
-    th {
-      background-color: #007bff;
-      color: white;
-      font-weight: bold;
-    }
+  th {
+    background-color: #007bff;
+    color: white;
+    font-weight: bold;
+  }
 
-    tr:nth-child(even) {
-      background-color: #f2f2f2;
-    }
+  tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
 
-    tr:hover {
-      background-color: #e0f7fa;
-    }
+  tr:hover {
+    background-color: #e0f7fa;
+  }
 
-    .num {
-      text-align: right;
-      font-variant-numeric: tabular-nums;
-    }
+  .num {
+    text-align: right;
+    font-variant-numeric: tabular-nums;
+  }
 
-    #tabla-hoja1, #tabla-hoja2 {
-      overflow-x: auto;
-    }
-  </style>
+  #tabla-hoja1, #tabla-hoja2 {
+    overflow-x: auto;
+    max-width: 100%;
+  }
+</style>
 </head>
 <body>
   <h1>Reporte de estado de cuenta de alquileres</h1>
