--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
   }
 
   .fila-final {
-  background-color: #d4edda !important; /* verde claro */
+  background-color: #40C575 !important; /* verde claro */
   font-weight: bold;
 }
 </style>
