--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
 </style>
 </head>
 <body>
+  <img src="logo.png" alt="Logo" style="height: 60px; float: right; margin-top: -20px;">
   <h1>Reporte de estado de cuenta de alquileres</h1>
 
   <h2>Movimientos</h2>
