--- a/public/index.html
+++ b/public/index.html
@@ -57,9 +57,15 @@
   }
 
   .fila-final {
-  background-color: #40C575 !important; /* verde claro */
-  font-weight: bold;
-}
+    background-color: #40C575 !important; /* verde claro */
+    font-weight: bold;
+  }
+
+  .usd {
+    font-weight: bold;
+    font-family: "Courier New", monospace;
+    background-color: #fff3cd; /* opcional: fondo amarillo claro */
+  }
 </style>
 </head>
 <body>
@@ -101,40 +107,51 @@ function cargarDatos(idElemento, url) {
       const rows = data.trim().split("\n").map(row => row.split("\t"));
       const tabla = document.createElement("table");
 
-      // Cabecera
-      const thead = document.createElement("thead");
-      const cabecera = document.createElement("tr");
-      rows[0].forEach(col => {
-        const th = document.createElement("th");
-        th.textContent = col;
-        cabecera.appendChild(th);
-      });
-      thead.appendChild(cabecera);
-      tabla.appendChild(thead);
+      let encabezadoExtraIndex = -1;
 
-      // Cuerpo
+      const thead = document.createElement("thead");
       const tbody = document.createElement("tbody");
+
       rows.slice(1).forEach((fila, i, arr) => {
+        const esUltimaFila = (idElemento === "tabla-hoja2") && (i === arr.length - 1);
         const tr = document.createElement("tr");
 
-        // Marcar la última fila solo en la segunda tabla
-        const esUltimaFila = (idElemento === "tabla-hoja2") && (i === arr.length - 1);
-        if (esUltimaFila) tr.classList.add("fila-final");
+        // Detectar si esta fila debe ser encabezado extra (empieza con "Fecha")
+        const esEncabezadoExtra = idElemento === "tabla-hoja2" && fila[0]?.trim().toLowerCase() === "fecha";
+
+        if (esEncabezadoExtra) {
+          encabezadoExtraIndex = i + 1; // evitar duplicar como cuerpo
+          fila.forEach(col => {
+            const th = document.createElement("th");
+            th.textContent = col;
+            thead.appendChild(tr);
+            tr.appendChild(th);
+          });
+          return; // saltar esta fila como parte del cuerpo
+        }
 
         fila.forEach(celda => {
           const td = document.createElement("td");
           td.textContent = celda;
 
+          // Alineación si es número, moneda o fecha
           if (esNumero(celda) || esFecha(celda)) {
             td.classList.add("num");
+          }
+
+          // Estilo especial para "Compras de USD"
+          if (idElemento === "tabla-hoja2" && celda.trim() === "Compras de USD") {
+            td.classList.add("usd");
           }
 
           tr.appendChild(td);
         });
 
+        if (esUltimaFila) tr.classList.add("fila-final");
         tbody.appendChild(tr);
       });
 
+      tabla.appendChild(thead);
       tabla.appendChild(tbody);
 
       const contenedor = document.getElementById(idElemento);
@@ -146,6 +163,7 @@ function cargarDatos(idElemento, url) {
       console.error("Error:", error);
     });
 }
+
 
 
     hojas.forEach(hoja => cargarDatos(hoja.id, hoja.url));
