--- a/public/index.html
+++ b/public/index.html
@@ -70,9 +70,10 @@
   border-bottom: 1px solid #ddd;
 }
 .usd {
-  font-weight: bold;
-  font-family: "Courier New", monospace;
-  background-color: #fff3cd;
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.2;
+  font-family: inherit;
 }
 
 #tabla-hoja2 table thead tr th {
