--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,7 @@
   background-color: #007bff !important;
   color: white;
   font-weight: bold;
+  text-align: center;
 }
 .fila-encabezado td {
   border-bottom: 1px solid #ddd;
